assets/css/style.css
/* ... */
.aspect-square {
  aspect-ratio: 1 / 1;
}
.h-72 {
  height: 18rem;
}
.h-full {
  height: 100%;
}
.w-full {
  width: 100%;
}
.max-w-xl {
  max-width: 36rem;
}
.grow {
  flex-grow: 1;
}
.grid-cols-2 {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}
.grid-cols-3 {
  grid-template-columns: repeat(3, minmax(0, 1fr));
}
.grid-cols-6 {
  grid-template-columns: repeat(6, minmax(0, 1fr));
}
.flex-col {
  flex-direction: column;
}
.content-center {
  align-content: center;
}
.content-end {
  align-content: flex-end;
}
.justify-center {
  justify-content: center;
}
.justify-between {
  justify-content: space-between;
}
.gap-1 {
  gap: 0.25rem;
}
.gap-12 {
  gap: 3rem;
}
.gap-16 {
  gap: 4rem;
}
.gap-6 {
  gap: 1.5rem;
}
.gap-8 {
  gap: 2rem;
}
.gap-10 {
  gap: 2.5rem;
}
.border-2 {
  border-width: 2px;
}
.border-y-4 {
  border-top-width: 4px;
  border-bottom-width: 4px;
}
.border-b-2 {
  border-bottom-width: 2px;
}
.border-accent {
  border-color: var(--accent-color);
}
.border-featured {
  border-color: var(--featured-color);
}
.bg-base-color {
  background-color: var(--base-color);
}
.bg-inherit {
  background-color: inherit;
}
.object-cover {
  -o-object-fit: cover;
     object-fit: cover;
}
.p-2 {
  padding: 0.5rem;
}
.p-8 {
  padding: 2rem;
}
.px-6 {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}
.px-8 {
  padding-left: 2rem;
  padding-right: 2rem;
}
.py-12 {
  padding-top: 3rem;
  padding-bottom: 3rem;
}
.py-16 {
  padding-top: 4rem;
  padding-bottom: 4rem;
}
.py-32 {
  padding-top: 8rem;
  padding-bottom: 8rem;
}
.py-8 {
  padding-top: 2rem;
  padding-bottom: 2rem;
}
.py-24 {
  padding-top: 6rem;
  padding-bottom: 6rem;
}
.py-20 {
  padding-top: 5rem;
  padding-bottom: 5rem;
}
.pb-16 {
  padding-bottom: 4rem;
}
.pb-2 {
  padding-bottom: 0.5rem;
}
.pb-3 {
  padding-bottom: 0.75rem;
}
.pb-6 {
  padding-bottom: 1.5rem;
}
.pr-12 {
  padding-right: 3rem;
}
.pt-4 {
  padding-top: 1rem;
}
.pt-8 {
  padding-top: 2rem;
}
.pl-2 {
  padding-left: 0.5rem;
}
.pb-12 {
  padding-bottom: 3rem;
}
.pb-8 {
  padding-bottom: 2rem;
}
.pb-10 {
  padding-bottom: 2.5rem;
}
.pb-4 {
  padding-bottom: 1rem;
}
.text-center {
  text-align: center;
}
.text-right {
  text-align: right;
}
.font-sans {
  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}
.text-2xl {
  font-size: 1.5rem;
  line-height: 2rem;
}
.text-4xl {
  font-size: 2.25rem;
  line-height: 2.5rem;
}
.text-5xl {
  font-size: 3rem;
  line-height: 1;
}
.text-lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}
.text-sm {
  font-size: 0.875rem;
  line-height: 1.25rem;
}
.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}
.text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}
.font-bold {
  font-weight: 700;
}
.font-extrabold {
  font-weight: 800;
}
.uppercase {
  text-transform: uppercase;
}
.text-base-color {
  color: var(--base-color);
}
.text-featured {
  color: var(--featured-color);
}

/* Custom CSS */

/* Button styles */

/* Reuseable Group Styles */
.button {
    background-color: var(--featured-color);
    color: var(--base-color);
    text-transform: uppercase;
    font-size: 0.75rem;
    padding: 0.5rem 1.5rem;
    border: 1px solid var(--featured-color);
    transition: all 150ms;
    display: inline-block;
}

.button:hover {
    background-color: var(--accent-color);
    color: var(--base-color);
    text-shadow: var(--base-color) 3px;
    border: 1px solid transparent;
}

/* Footer & header links speecifically so they don't jump */

footer a {
    border-bottom: 2px solid transparent;
}

footer a:hover {
    border-bottom: 2px solid;
    display: inline-block;
}

header a {
    border: 2px solid transparent;
    transition: all 150ms;
}

header a:hover {
    border-bottom: 2px solid;
}

.focus\:border-2:focus {
  border-width: 2px;
}

.focus\:border-accent:focus {
  border-color: var(--accent-color);
}

.focus\:outline-none:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

@media (min-width: 640px) {
  .sm\:px-16 {
    padding-left: 4rem;
    padding-right: 4rem;
  }
  .sm\:px-12 {
    padding-left: 3rem;
    padding-right: 3rem;
  }
}

@media (min-width: 768px) {
  .md\:order-none {
    order: 0;
  }
  .md\:flex {
    display: flex;
  }
  .md\:grid {
    display: grid;
  }
  .md\:h-full {
    height: 100%;
  }
  .md\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
  .md\:grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
  .md\:flex-row {
    flex-direction: row;
  }
  .md\:justify-between {
    justify-content: space-between;
  }
}

@media (min-width: 1024px) {
  .lg\:col-span-1 {
    grid-column: span 1 / span 1;
  }
  .lg\:col-span-3 {
    grid-column: span 3 / span 3;
  }
  .lg\:pb-0 {
    padding-bottom: 0px;
  }
}

